--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Premiações garantidas em fichas de Cash Game com saque instantâneo.</p>
                                     <p>Torça pela sua vez de ganhar</p>
                                 </div>
                             </div>
-                            <a target="_blank" href=""><button class="icon">Quero entrar no grupo agora<ion-icon name="logo-whatsapp"></ion-icon></button></a>
+                            <a target="_blank" href="https://chat.whatsapp.com/EeEAhknAUls4CfHzLokosn"><button class="icon">Quero entrar no grupo agora<ion-icon name="logo-whatsapp"></ion-icon></button></a>
 
                             <div class="topics dois">
                                 <div class="topic">
