--- a/index.html
+++ b/index.html
@@ -34,6 +34,24 @@
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
+    <!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '25032522866371154');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=25032522866371154&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+
 </head>
 <body id="body" class="smooth-scroll-wrapper">    
     <header class="header" id="home">
@@ -106,6 +124,19 @@ Premiações garantidas em fichas de Cash Game com saque instantâneo.</p>
                 </svg>
             </div> -->
     </header>
+
+    <script>
+  document.addEventListener("DOMContentLoaded", function () {
+    var whatsappBtn = document.getElementById("whatsappButton");
+
+    if (whatsappBtn) {
+      whatsappBtn.addEventListener("click", function () {
+        // Dispara o evento Lead no Pixel
+        fbq('track', 'Lead');
+      });
+    }
+  });
+</script>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
